# SSU-CAR_Embeded

./: README.md
mobis-ssu/src/cam2node/: package.xml  setup.cfg  setup.py
mobis-ssu/src/cam2node/cam2node/: usbcam_pub.py
mobis-ssu/src/closedEyeDetection/: package.xml  setup.cfg  setup.py
mobis-ssu/src/closedEyeDetection/closedEyeDetection/: eye_tracker.py
mobis-ssu/src/head_pose_estimation/: package.xml  setup.cfg  setup.py
mobis-ssu/src/inner_scenario/: package.xml  setup.cfg  setup.py
mobis-ssu/src/phone_detection/: package.xml  setup.cfg  setup.py
raspberrypi/: example.cpp
raspberrypi/lane_ex/: CMakeLists.txt  lanedetection.cpp
